--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tria-sdk/authenticate-staging": "^1.0.13",
+    "@tria-sdk/authenticate-staging": "^1.0.14",
     "@tria-sdk/connect": "^1.1.4",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "test-ahaan-v2-4": "^1.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.89.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,21 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "@types/react": "^18.2.33",
+    "@types/react-router-dom": "^5.3.3",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.8.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "postcss-loader": "^7.3.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
+    "url": "^0.11.0"
   }
 }
