--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tria-sdk/authenticate": "^1.2.73",
-    "@tria-sdk/connect": "^1.1.4",
+    "@tria-sdk/connect": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -41,6 +41,21 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "@types/react": "^18.2.33",
+    "@types/react-router-dom": "^5.3.3",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.8.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "postcss-loader": "^7.3.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
+    "url": "^0.11.0"
   }
 }
