--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tria-sdk/authenticate-staging": "^1.0.30",
-    "@tria-sdk/connect": "^1.1.12",
+    "@tria-sdk/authenticate": "1.2.93",
+    "@tria-sdk/connect": "1.3.17",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
