--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "webpack": "^5.89.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
@@ -58,6 +58,7 @@
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "@craco/craco": "^7.1.0"
   }
 }
