--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tria-sdk/authenticate-staging": "^1.0.30",
     "@tria-sdk/authenticate": "1.2.93",
-    "@tria-sdk/connect": "1.3.17",
+    "@tria-sdk/authenticate-staging": "^1.0.30",
+    "@tria-sdk/connect": "^1.4.30",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@types/react": "^18.2.33",
     "@types/react-router-dom": "^5.3.3",
     "assert": "^2.0.0",
@@ -58,7 +59,6 @@
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
-    "url": "^0.11.0",
-    "@craco/craco": "^7.1.0"
+    "url": "^0.11.0"
   }
 }
