--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tria-sdk/authenticate": "1.2.93",
     "@tria-sdk/authenticate-staging": "^1.0.30",
-    "@tria-sdk/connect": "^1.4.30",
+    "@tria-sdk/connect": "1.4.21",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
