--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "react-template",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tria-sdk/authenticate": "1.2.93",
+    "@tria-sdk/authenticate": "1.4.33",
     "@tria-sdk/authenticate-staging": "^1.0.30",
-    "@tria-sdk/connect": "1.3.16",
+    "@tria-sdk/connect": "1.4.35",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
     "test-ahaan-v2-4": "^1.0.7",
+    "wagmi": "^1.4.12",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0"
   },
