--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "test-ahaan-v2-4": "^1.0.7",
     "wagmi": "^1.4.12",
     "web-vitals": "^2.1.4",
