--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tria-sdk/authenticate": "1.4.33",
     "@tria-sdk/authenticate-staging": "^1.0.30",
     "@tria-sdk/connect": "1.4.35",
+    "@tria-sdk/connect-staging": "1.4.64",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
