--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-3d": "^1.0.4",
     "url": "^0.11.0"
   }
 }
