--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@tria-sdk/authenticate": "^1.3.121",
     "@tria-sdk/authenticate-staging": "^1.0.30",
     "@tria-sdk/connect": "1.4.35",
-    "@tria-sdk/connect-staging": "1.4.66",
+    "@tria-sdk/connect-staging": "^3.0.3",
     "react": "^18.2.0",
     "react-app-rewired": "^2.1.9",
     "react-dom": "^18.2.0",
@@ -21,6 +21,7 @@
     "webpack": "^5.89.0"
   },
   "scripts": {
+    "dev": "npm i -f && npm start",
     "start": "craco start",
     "build": "craco build",
     "test": "react-app-rewired test",
